<resources>
    <string name="app_name">BumbleBee Coffee Truck</string>
    <string name="textview">TextView</string>
    <string name="passwordNumeric" />
    <string name="name">Name</string>
    <string name="enter_a_nickname">Enter a nickname</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="your_password_must_contain_6_numbers">(Your password must contain 6 numbers)</string>
    <string name="log_in">Log In</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="welcome">welcome</string>
    <string name="userInfo">Hosgeldiniz</string>
</resources>