<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#919191"
    tools:context=".MainActivity3">

    <ImageButton
        android:id="@+id/notificationButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="#919191"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/notification" />

    <ImageButton
        android:id="@+id/locationButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="#91919191"
        android:contentDescription="@string/todo2"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/location" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="20dp"
        android:layout_height="165dp"
        android:background="#919191"
        android:max="10"
        android:progress="0"
        android:rotation="-90"
        android:scaleType="fitCenter"
        android:scaleX="9"
        android:scaleY="5"
        app:layout_constraintBottom_toBottomOf="@+id/bumblebeeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bosKovan"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/bosKovan"
        android:layout_width="138dp"
        android:layout_height="115dp"
        android:contentDescription="@string/todo4"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        app:srcCompat="@drawable/dolu_kovan" />

    <ImageButton
        android:id="@+id/bumblebeeButton"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:background="#919191"
        android:contentDescription="@string/todo5"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.996"
        app:srcCompat="@drawable/bumblebee_home" />

    <ImageButton
        android:id="@+id/homepageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="#919191"
        android:contentDescription="@string/todo6"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/homepagegold" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:background="#919191"
        android:contentDescription="@string/todo7"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971"
        app:srcCompat="@drawable/profileicon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="240dp"
        android:layout_height="92dp"
        android:fontFamily="casual"
        android:text="@string/userInfo"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/bumblebeeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.236" />

</androidx.constraintlayout.widget.ConstraintLayout>